# GeneralsGameCode

./: .clang-format  .clang-tidy  .gitignore  ASMDocumentation.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTE.md  CONTRIBUTING.md  Dockerfile  README.md  TESTING.md  build.sh  dockerbuild.sh  vcpkg-lock.json  vcpkg.json
Common/: .gitignore  CMakeLists.txt
Common/Libraries/: CMakeLists.txt
Common/Tools/: CMakeLists.txt
Common/Tools/CRCDiff/: CMakeLists.txt
Common/Tools/Compress/: CMakeLists.txt
Common/Tools/assetcull/: CMakeLists.txt
Common/Tools/buildVersionUpdate/: CMakeLists.txt
Core/Libraries/: CMakeLists.txt
Core/Tools/: CMakeLists.txt
Core/Tools/Autorun/: ARGS.CPP  ARGS.H  ARGS.cpp  CDCNTRL.CPP  CDCNTRL.H  CDCNTRL.cpp  CallbackHook.h  DrawButton.cpp  DrawButton.h  EZGIMEX.cpp  GETCD.CPP  GETCD.cpp  GameText.cpp  GameText.h  GetCD.h  IGR.cpp  IGR.h  JSUPPORT.H  Jsupport.cpp  Locale_API.cpp  Locale_API.h  POINT.h  RECT.h  TTFont.cpp  TTFont.h  Utils.cpp  Utils.h  ViewHTML.cpp  ViewHTML.h  WSYS_File.cpp  WSYS_FileSystem.cpp  WSYS_FileSystem.h  WSYS_RAMFile.cpp  WSYS_RAMFile.h  WSYS_StdFile.cpp  WSYS_StdFile.h  WSYS_StdFileSystem.cpp  WSYS_StdFileSystem.h  WSYS_file.h  WinFix.CPP  (+11 more)
Core/Tools/Babylon/: Babylon.cpp  Babylon.h  BabylonDlg.cpp  BabylonDlg.h  CMakeLists.txt  DlgProxy.cpp  DlgProxy.h  ExportDlg.cpp  ExportDlg.h  GenerateDlg.cpp  GenerateDlg.h  MatchDlg.cpp  MatchDlg.h  ProceedDlg.cpp  ProceedDlg.h  Report.cpp  Report.h  RetranslateDlg.cpp  RetranslateDlg.h  StdAfx.h  TransDB.cpp  TransDB.h  VIEWDBSII.cpp  VIEWDBSII.h  VerifyDlg.cpp  VerifyDlg.h  VerifyTextDlg.cpp  VerifyTextDlg.h  ViewDBsDlg.cpp  XLStuff.cpp  XLStuff.h  bin.cpp  bin.h  excel8.cpp  excel8.h  expimp.cpp  expimp.h  fileops.cpp  fileops.h  iff.cpp  (+10 more)
Core/Tools/CRCDiff/: CRCDiff.cpp  KVPair.cpp  KVPair.h  debug.cpp  debug.h  expander.cpp  expander.h  misc.h
Core/Tools/Compress/: CMakeLists.txt  Compress.cpp
Core/Tools/DebugWindow/: CMakeLists.txt  DebugWindow.cpp  DebugWindow.h  DebugWindowDialog.cpp  DebugWindowDialog.h  DebugWindowExport.h  Resource.h  StdAfx.h  dbgwinapp.cpp  dbgwinapp.h  dbgwinframe.cpp  dbgwinframe.h  debugwindow_posix.cpp  debugwindow_win32.cpp  debugwindow_wx.cpp  debugwindow_wx.h  test_debugwindow.cpp  wxdbgwinui.cpp  wxdbgwinui.h
Core/Tools/ImagePacker/: CMakeLists.txt
Core/Tools/Launcher/: BFISH.CPP  BFISH.H  BFISH.cpp  configfile.cpp  configfile.h  dialog.cpp  dialog.h  dictionary.h  filed.h  findpatch.cpp  findpatch.h  loadbmp.cpp  loadbmp.h  main.cpp  monod.cpp  monod.h  odevice.h  patch.cpp  patch.h  process.cpp  process.h  resource.h  streamer.h  wdebug.cpp  wdebug.h  winblows.cpp  winblows.h  wstring.cpp  wstring.h  wstypes.h
Core/Tools/PATCHGET/: CHATAPI.CPP  CHATAPI.H  CHATAPI.cpp  CMakeLists.txt  COMINIT.CPP  COMINIT.H  COMINIT.cpp  DownloadManager.cpp  DownloadManager.h  PROCESS.CPP  PROCESS.H  PROCESS.cpp  PROCESS.h  RESOURCE.H  Registry.h  WINBLOWS.CPP  WINBLOWS.H  WINBLOWS.cpp  WSTYPES.H  debug.cpp  debug.h  registry.cpp
Core/Tools/W3DView/: AddToLineupDialog.cpp  AddToLineupDialog.h  AdvancedAnimSheet.cpp  AdvancedAnimSheet.h  AggregateNameDialog.cpp  AggregateNameDialog.h  AmbientLightDialog.cpp  AmbientLightDialog.h  AnimMixingPage.cpp  AnimMixingPage.h  AnimReportPage.cpp  AnimReportPage.h  AnimatedSoundOptionsDialog.cpp  AnimatedSoundOptionsDialog.h  AnimationPropPage.cpp  AnimationPropPage.h  AnimationSpeed.cpp  AnimationSpeed.h  AssetInfo.cpp  AssetInfo.h  AssetPropertySheet.cpp  AssetPropertySheet.h  AssetTypes.h  BackgroundBMPDialog.cpp  BackgroundBMPDialog.h  BackgroundColorDialog.cpp  BackgroundColorDialog.h  BackgroundObjectDialog.cpp  BackgroundObjectDialog.h  BoneMgrDialog.cpp  BoneMgrDialog.h  CMakeLists.txt  CameraDistanceDialog.cpp  CameraDistanceDialog.h  CameraSettingsDialog.cpp  CameraSettingsDialog.h  ColorBar.cpp  ColorBar.h  ColorPicker.cpp  ColorPicker.h  (+124 more)
Core/Tools/assetcull/: assetcull.cpp
Core/Tools/buildVersionUpdate/: CMakeLists.txt  buildVersionUpdate.cpp
Core/Tools/mangler/: crc.cpp  crc.h  endian.h  mangler.cpp  mangler.h  manglertest.cpp
Core/Tools/matchbot/: debug.cpp  debug.h  encrypt.cpp  encrypt.h  generals.cpp  generals.h  global.cpp  global.h  main.cpp  matcher.cpp  matcher.h  mydebug.cpp  mydebug.h  rand.cpp  rand.h
Core/Tools/textureCompress/: resource.h  textureCompress.cpp
Core/Tools/timingTest/: StdAfx.h  timingTest.cpp
Core/Tools/versionUpdate/: CMakeLists.txt  versionUpdate.cpp
Core/Tools/wolSetup/: CMakeLists.txt  StdAfx.h  resource.h  verchk.cpp  verchk.h  wolInit.cpp  wolSetup.cpp  wolSetup.h
Generals/Code/: CMakeLists.txt
Generals/Code/GameEngine/: CMakeLists.txt
Generals/Code/GameEngineDevice/: CMakeLists.txt
Generals/Code/Libraries/: CMakeLists.txt
Generals/Code/Main/: AppGlobals.cpp  AppGlobals.h  CMakeLists.txt  RTS.RC  Version.rc.in  WinMain.cpp  WinMain.h  main.cpp  resource.h
Generals/Code/Tools/: CMakeLists.txt
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngineDevice/: CMakeLists.txt
GeneralsMD/Code/Libraries/: CMakeLists.txt
GeneralsMD/Code/Main/: AppGlobals.h  CMakeLists.txt  RTS.RC  WinMain.cpp  WinMain.h  main.cpp  resource.h
GeneralsMD/Code/Tools/: CMakeLists.txt
Platform/MacOS/: CMakeLists.txt
Platform/MacOS/Include/: MacOSAudioManager.h  MacOSBuffers.h  MacOSDebugLog.h  MacOSGameClient.h  MacOSGameWindowManager.h  MacOSScreenshot.h  MacOSWindowManager.h  StdKeyboard.h  StdMouse.h  atlbase.h  atlcom.h  comip.h  comutil.h  d3d8.h  d3d8_stub.h  d3d8caps.h  d3d8types.h  d3dx8.h  d3dx8core.h  d3dx8effect.h  d3dx8math.h  d3dx8mesh.h  d3dx8shape.h  d3dx8tex.h  ddraw.h  dinput.h  direct.h  dsound.h  excpt.h  imagehlp.h  io.h  lmcons.h  macos_carbon_compat.h  malloc.h  mapicode.h  mbstring.h  mmsystem.h  new.h  objbase.h  ocidl.h  (+14 more)
Platform/MacOS/ReferenceDocs/: Graphics_Architecture.md  Input_and_UI_Patterns.md  Known_Issues_and_Bugs.md  RESEARCH_INDEX.md  Runtime_Commands.md
Platform/MacOS/Scripts/: files.sh
Platform/MacOS/docs/: BUILD_SYSTEM.md  CHANGELOG.md  (+5 more)
(+5031 files in other folders)
